[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "rustls-no-provider",
    "system-proxy",
] }
zip = "2"
flate2 = "1"
octocrab = "0.54"
tokio = { version = "1", features = ["full"] }
xshell = "0.2"

