[package]
name = "luhomo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
time = { version = "0.3.53", features = [
    "macros",
    "formatting",
    "parsing",
    "local-offset",
    "serde",
] }
url = { version = "2.5.8", features = ["serde"] }
bon = "3.9"
serde_with = { version = "3", features = ["time_0_3"] }
bytes = "1"
http = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "rustls",
    "charset",
    "json",
], optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]