[package]
name = "luhomo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "proxy_core_test_double"
path = "src/bin/proxy_core_test_double.rs"
test = false
bench = false

[dependencies]
tokio = { version = "1", features = ["net", "time", "macros", "fs", "process", "signal", "io-util", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
time = { version = "0.3.53", features = [
    "macros",
    "formatting",
    "parsing",
    "local-offset",
    "serde",
] }
url = { version = "2.5.8", features = ["serde"] }
bon = "3.9"
serde_with = { version = "3", features = ["time_0_3"] }
bytes = "1"
http = "1"
thiserror = "2"
interprocess = { version = "2", features = ["tokio"] }
serde_yaml = "0.9"
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "rustls",
    "charset",
    "json",
], optional = true }
tokio-util = "0.7.18"
tracing = "0.1"
sha2 = "0.10"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
